--- a/static/css/main.css
+++ b/static/css/main.css
@@ -23,6 +23,7 @@ ul {
 
 li {
   margin-left: 35px;
+  word-wrap: break-word;
 }
 
 /* Adapted from https://pythonhow.com/add-css-to-flask-website/ */
