--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Assignment 6: OAuth 2.0</title>
+    <title>Fairytale API by acheerio</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
